Edited the swagger page.
